--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.11"
 django = "^5.0.3"
 psycopg2-binary = "^2.9.9"
 pytils = "^0.4.1"
-django-crontab = "^0.7.1"
+django-apscheduler = "^0.6.2"
 
 
 [build-system]
