--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ psycopg2-binary = "^2.9.9"
 pytils = "^0.4.1"
 django-apscheduler = "^0.6.2"
 django = "4.2"
+pillow = "^10.2.0"
 
 
 [build-system]
