--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,8 @@
-YA_PASSWORD =
-CACHE_ENABLED =
-EMAIL_HOST_USER =
+SECRET_KEY=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+REDIS=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+CACHE_ENABLED=
